Fix mobile due to scrollbar changes

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -2545,14 +2545,13 @@ body {
     @media (max-width: 991px) {
         .tu-card-container {
             margin-top: 10px;
-            height: calc(100% - 60px);
         }
     }
 
     @media (min-width: 992px) {
         .tu-card-container {
             margin-top: 10px;
-            height: calc(100% - 60px);
+            height: calc(100% - 50px);
             overflow-y: auto;
         }
     }
@@ -2584,6 +2583,12 @@ body {
 
     &:first-of-type {
         margin-top: 0;
+    }
+}
+
+@media (max-width: 992px) {
+    .tu-card {
+        border-radius: 15px;
     }
 }
 
@@ -2631,11 +2636,9 @@ body {
 
 .tu-container{
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 95px;
+    padding: 95px 15px 0px;
 }
 
     @media (min-width: 576px) {
